--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ server:
 #spring
 spring:
   datasource:
-    url: jdbc:mysql:///pensionsystem?serverTimezone=GMT%2B8&characterEncoding=utf8
+    url: jdbc:mysql:///pension_system?serverTimezone=GMT%2B8&characterEncoding=utf8
     username: root
     password: root
   thymeleaf:
@@ -21,11 +21,16 @@ spring:
     static-locations: file:F:\pension_system
   mvc:
     static-path-pattern: /**
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
 #mybatis
 mybatis:
   configuration:
     default-statement-timeout: 30
     map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations:
     - classpath:/mapper/mysql/*.xml
 
@@ -33,6 +38,11 @@ mybatis:
 logging:
   level:
     com.cy: DEBUG
+
+
+
+
+
 
 #spring thread pool
 async-thread-pool:
